Fix: aligned the code

--- a/src/app/members/page.module.css
+++ b/src/app/members/page.module.css
@@ -1,7 +1,7 @@
 .main__layout {
   width: 100%;
   margin-top: 80px;
-  overflow-y: hidden;
+  overflow-x: hidden;
   display: flex;
 }
 .main__layout__membersSide {
